--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dotenv": "^6.1.0",
     "ejs": "^2.6.1",
     "expres": "^0.0.5",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
